tests/init/neg/leak-warm.check
-- Error: tests/init/neg/leak-warm.scala:19:18 -------------------------------------------------------------------------
19 |    val l2 = l.map(_.m()) // error
   |             ^^^^^^^^^^^^
   |             Call method leakWarm.l.map[leakWarm.A#B](
   |               {
   |                 def $anonfun(_$1: leakWarm.A): leakWarm.A#B = _$1.m()
   |                 closure($anonfun)
   |               }
   |             ) on a value with an unknown initialization.
